--- a/gtk-3.0/gtk-dark.css
+++ b/gtk-3.0/gtk-dark.css
@@ -5821,10 +5821,12 @@ radiobutton.color-button:active > radio {
   background-size: calc(100% + 2px); }
 
 .xfce4-panel.panel {
-  background-color: #171a1f;
-  color: #a8a8a8;
-  text-shadow: none;
-  -gtk-icon-shadow: none; }
+  border-radius: 0; }
+  .xfce4-panel.panel.panel {
+    background-color: #171a1f;
+    color: #a8a8a8;
+    text-shadow: none;
+    -gtk-icon-shadow: none; }
 
 #tasklist-button {
   color: rgba(165, 165, 165, 0.8);
@@ -5839,20 +5841,20 @@ radiobutton.color-button:active > radio {
     background-color: rgba(0, 0, 0, 0.25);
     box-shadow: inset 0 -2px #9bbfbf; }
 
-.xfce4-panel.panel button.flat {
+.xfce4-panel.panel.panel button.flat {
   color: #a5a5a5;
   border-radius: 0;
   border: none;
   background-color: #171a1f;
   font-weight: normal; }
-  .xfce4-panel.panel button.flat:hover {
+  .xfce4-panel.panel.panel button.flat:hover {
     border: none;
     background-color: #2d333c; }
-  .xfce4-panel.panel button.flat:active, .xfce4-panel.panel button.flat:checked {
+  .xfce4-panel.panel.panel button.flat:active, .xfce4-panel.panel.panel button.flat:checked {
     color: #a5a5a5;
     border-bottom: 2px solid #9bbfbf;
     background-color: #131519; }
-    .xfce4-panel.panel button.flat:active label, .xfce4-panel.panel button.flat:active image, .xfce4-panel.panel button.flat:checked label, .xfce4-panel.panel button.flat:checked image {
+    .xfce4-panel.panel.panel button.flat:active label, .xfce4-panel.panel.panel button.flat:active image, .xfce4-panel.panel.panel button.flat:checked label, .xfce4-panel.panel.panel button.flat:checked image {
       color: inherit; }
 
 /********
